* Wed May 19 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.5
- Fixed
  - Align EL8 STIG settings
- Changed
  - Bump supported puppet version to include 7
  - Always add the 'head' rules (global auditd config) settings when applying
    rule sets. These do not interfere with user-defined rules and are required
    for proper functionality of the system.

* Thu Apr 08 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.4
- Use `-F key=` in lieu of `-k` in the STIG profile, to match scanner updates.

* Sun Mar 07 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.3
- Switch auditd rules to be 'always,exit' instead of 'exit,always' to match the
  man pages and general scanner updates.

* Tue Feb 02 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.3
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Thu Jan 07 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.6.3
- Removed EL6 support

* Mon Nov 23 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.2-0
- Fixed a bug in which the module could not enable auditing in a system
  with auditing already disabled in the kernel, when replication of the
  audit logs to syslog was required.
  - Manifest would fail to compile because of a nil `auditd_version` fact.

* Wed Sep 23 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.1-0
- Allow auditd space_left and admin_space_left to accept percentages on
  supported versions

* Wed Aug 12 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.0-0
- Ensure that the auditd service is not managed if the kernel is not enforcing
  auditing
- Add an acceptance test for toggling disabling auditing without modifying the
  kernel parameter

* Fri Aug 07 2020 Marcel Fischer <marcel@fury.home.loc> - 8.5.3-0
- Add `INCREMENTAL_ASYNC` to possible values for `$::auditd::flush`

* Tue Aug 04 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.2-0
- Ensure that facts are properly confined
- Utilize the new simplib__auditd fact
